+ added JWT + upgraded front + added new controllers + added OpenWeatherMap API connection

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,19 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+
+    "Jwt": {
+        "Key": "1234567890abc!",
+        "Issuer": "WeatherSeaServer",
+        "Audience": "WeatherSeaClient"
+    },
+
+    "ConnectionStrings": {
+        "DatabaseConnection": "Host=localhost;Database=WSDB;Username=Application;Password=1111"
     }
-  },
-  "AllowedHosts": "*"
 }
