--- a/WeatherSeaWebApplication.csproj
+++ b/WeatherSeaWebApplication.csproj
@@ -10,13 +10,24 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="wwwroot\css\index.css" />
+    <Content Remove="wwwroot\js\openWeatherMapRequester.js" />
   </ItemGroup>
 
   <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\js\openWeatherMapRequester.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\css\index.css" />
+    <None Include="wwwroot\js\openWeatherMapRequester.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid.EntityFrameworkAdapter" Version="8.0.3" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.0-preview.3" />
   </ItemGroup>
 
   <ItemGroup>
