--- a/appsettings.json
+++ b/appsettings.json
@@ -8,12 +8,13 @@
     "AllowedHosts": "*",
 
     "Jwt": {
-        "Key": "1234567890abc!",
+        "Key": "d324jtg5hfj354gf438hgf7238d23fg3#",
         "Issuer": "WeatherSeaServer",
-        "Audience": "WeatherSeaClient"
+        "Audience": "WeatherSeaClient",
+        "ExpiresHours":  "12"
     },
 
     "ConnectionStrings": {
-        "DatabaseConnection": "Host=localhost;Database=WSDB;Username=Application;Password=1111"
+        "DatabaseConnection": "Host=localhost; Database=WSDB; Username=postgres; Password=1111"
     }
 }
